css tweaks to prevent word wrap in tabs

--- a/src/components/controls/data-controls.sass
+++ b/src/components/controls/data-controls.sass
@@ -2,23 +2,32 @@
 
 .data-analysis-type
   width: 100%
-  height: 24px
+  height: 22px
   text-align: center
   border-bottom: 2px solid silver
 
   .data-option
     width: 140px
     display: inline-block
-    height: 18px
+    height: 16px
     background: $color-nav-cinder-light3
-    font-size: 0.75em
+    border: 2px solid $color-nav-cinder-light3
+    border-bottom: 0
+    border-top-left-radius: 4px
+    border-top-right-radius: 4px
+    font-size: 0.7em
     opacity: 0.7
-    padding: 2px
+    padding: 2px 0px
+    white-space: nowrap
+
     &:hover
+      border: 2px solid $color-nav-cinder-light1
+      border-bottom: 0
       background: $color-nav-cinder-light2
       opacity: 1
     &.selected
       border: 2px solid $color-nav-cinder-light1
+      border-bottom: 0
       opacity: 1
 
     input[type="radio"]
